feature: endpoint for search marks
